iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_variable_include_not_found.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Variable error: 'config.storage' not found @ example-templates/errors/variable-include-not-found.yaml:7:10 (errno: IY2001)
  -> variable not defined in current scope

   6 | 
   7 | host: !$ config.storage
     |          ^^^^^^^^^^^^^^ variable not defined

   available variables: config

   For more info: iidy explain IY2001
