iidy/tests/snapshots/error_examples_snapshots__yaml_syntax_unexpected_end_error.snap
---
source: tests/error_examples_snapshots.rs
expression: error_output
---
Syntax error: unexpected end of file @ example-templates/errors/yaml-syntax-unexpected-end.yaml:7:15 (errno: IY1001)
  -> missing closing quote or bracket

   6 |       BucketName: "test-bucket
   7 |       Tags: []

   For more info, run: iidy explain IY1001
